erlang-p1-stun (1.0.0-0.2) unstable; urgency=medium

  * Merge changes from upstream:
    * Include debian/watch file.

 -- Mathias Ertl <mati@jabber.at>  Fri, 15 Jan 2016 21:49:56 +0100

erlang-p1-stun (1.0.0-0.1) unstable; urgency=medium

  * New upstream release.
  * This package now uses upstream releases instead of a git snapshot,
    hence the versioning has changed.
  * Add minimum versions for erlang-p1-utils and erlang-p1-tls.
  * Use upstream tags for source packages.
  * Name me as a maintainer.
  * Remove duplicate license paragraph.

 -- Mathias Ertl <mati@jabber.at>  Fri, 15 Jan 2016 21:49:56 +0100

erlang-p1-stun (0.2015.09.16-0.2local) unstable; urgency=medium

  * Rebuild with new erlang-p1-tls.

 -- Mathias Ertl <mati@jabber.at>  Fri, 02 Oct 2015 19:14:23 +0200

erlang-p1-stun (0.2015.09.16-0.1local) unstable; urgency=medium

  * Imported Upstream version 0.2015.09.16.
  * Name me as the maintainer.
  * Add VCS-* fields in debian/control.
  * Refresh remove-deps.diff.

 -- Mathias Ertl <mati@jabber.at>  Fri, 02 Oct 2015 18:49:02 +0200

erlang-p1-stun (0.2014.08.20-1) unstable; urgency=medium

  * Imported Upstream version 0.2014.08.20

 -- Philipp Huebner <debalance@debian.org>  Thu, 28 Aug 2014 12:14:46 +0200

erlang-p1-stun (0.2014.05.08-1) unstable; urgency=medium

  * Imported Upstream version 0.2014.05.08
  * Added new build-dependency: erlang-eunit

 -- Philipp Huebner <debalance@debian.org>  Wed, 14 May 2014 10:56:26 +0200

erlang-p1-stun (0.2013.06.23-1) unstable; urgency=low

  * Initial release, see #744885 for background

 -- Philipp Huebner <debalance@debian.org>  Wed, 23 Apr 2014 09:56:59 +0200