@@ -3,27 +3,30 @@ Upstream-Name: stun
 Source: https://github.com/processone/stun
 
 Files: *
-Copyright: 2002-2014 ProcessOne
-           2009-2014 Evgeniy Khramtsov <ekhramtsov@process-one.net>
+Copyright: 2002-2016 ProcessOne
+           2009-2016 Evgeniy Khramtsov <ekhramtsov@process-one.net>
 License: GPL-2+
 
 Files: debian/*
-Copyright: 2014 Philipp Huebner <debalance@debian.org>
+Copyright: 2014-2016 Philipp Huebner <debalance@debian.org>
 License: GPL-2+
 
 License: GPL-2+
- This package is free software; you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation; either version 2 of the License, or
- (at your option) any later version.
+ This program is free software; you can redistribute it and/or
+ modify it under the terms of the GNU General Public License as
+ published by the Free Software Foundation; either version 2 of the
+ License, or (at your option) any later version.
  .
- This package is distributed in the hope that it will be useful,
+ This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ General Public License for more details.
  .
  You should have received a copy of the GNU General Public License
- along with this program. If not, see <http://www.gnu.org/licenses/>
+ along with this program; if not, write to the Free Software
+ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ 02111-1301 USA
  .
- On Debian systems, the complete text of the GNU General
- Public License version 2 can be found in "/usr/share/common-licenses/GPL-2".
+ On Debian systems, the full text of the GNU General Public
+ License version 2 can be found in the file
+ `/usr/share/common-licenses/GPL-2'.
