@@ -2,6 +2,8 @@ erlang-p1-stun (1.0.0-0.2) unstable; urgency=medium
 
   * Merge changes from upstream:
     * Include debian/watch file.
+    * Enable eunit tests.
+    * Update debian/copyright.
 
  -- Mathias Ertl <mati@jabber.at>  Fri, 15 Jan 2016 21:49:56 +0100
 
